<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rlvVecino"
            android:padding="10dp"
            card_view:cardBackgroundColor="@color/colorVecino"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblVecino"
                android:text="@string/soy_vecino"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_vecino"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/rlvNoVecino"
            android:padding="20dp"
            card_view:cardBackgroundColor="@color/colorNoSoyVecino"
            card_view:cardUseCompatPadding="true"
            android:layout_marginStart="5dp"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblNoVecino"
                android:text="@string/no_soy_vecino"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_novecino"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_pagos"
        android:layout_below="@id/linear1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOtrasReservas"
        android:layout_below="@+id/rv_pagos"
        android:layout_marginTop="20dp"
        android:background="@color/colorBoton"
        android:text="@string/boton_otras_reservas"
        android:textColor="@android:color/white"/>
</RelativeLayout>